--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,51 @@ nav input {
 }
 .main-info {
   width: 55%;
+  text-align: left;
+  padding: 3rem;
+}
+.details {
+  width: 70%;
+}
+.speakers img {
+  height: 200px;
+  width: 100px;
+  border-radius: 50%;
+}
+.event-tag {
+  background-color: #ff6962;
+  display: inline;
+  margin: 0.5rem;
+  padding: 0.2rem 0.8rem;
+  border-radius: 30px;
+  color: #ffffff;
+}
+button {
+  background-color: #ff6962;
+  padding: 0.5rem 2rem;
+  border: none;
+  border-radius: 5px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: medium;
+  cursor: pointer;
 }
 .single-event img {
   width: 50%;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.rsvp-form {
+  margin: auto;
+  width: 300px;
+  height: 300px;
+  background-color: #ffffff;
+  padding: 1.5rem;
+  border-radius: 10px;
 }
