--- a/src/App.css
+++ b/src/App.css
@@ -154,10 +154,30 @@ button {
 .rsvp-form {
   margin: auto;
   width: 300px;
-  height: 300px;
+  height: 370px;
   background-color: #ffffff;
   padding: 1.5rem;
   border-radius: 10px;
+  text-align: left;
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.rsvp-form i {
+  font-size: 30px;
+  cursor: pointer;
+  position: absolute;
+  right: 1rem;
+}
+.rsvp-form label {
+  margin-bottom: 0.5rem;
+}
+.rsvp-form input {
+  display: flex;
+  width: 90%;
+  padding: 0.3rem 0.7rem;
+  margin-top: 0.5rem;
 }
 .cursor {
   cursor: pointer;
