--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ nav input {
   justify-content: center;
 }
 .speaker {
-  width: 100px;
+  width: 200px;
   height: auto;
   padding: 2rem 0;
   line-height: 1rem;
@@ -129,6 +129,17 @@ nav input {
   margin: 3rem;
   padding: 4rem;
   border-radius: 10px;
+}
+.info {
+  background-color: #ffffff;
+  padding: 2rem;
+  border-radius: 10px;
+  width: 300px;
+  margin: auto;
+  line-height: 1.5rem;
+}
+i {
+  margin-right: 0.5rem;
 }
 button {
   background-color: #ff6962;
